# vibe_machine

./: Cargo.toml  README.md
src/: algo.rs  editor.rs  lib.rs  logger.rs  process.rs  theme.css  widgets.rs
