[package]
name = "VIBE_MACHINE"
version = "0.1.0"
authors = ["Lorenzo Panieri <panierilorenzo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rustfft = "4.0.0"
vst = "0.2.1"
# rand_xoshiro = "0.4.0"
rust_dsp_utils = {git = "https://github.com/Flux-Audio/rust-dsp-utils", branch="main"}
dsp_lab = {git = "https://github.com/Flux-Audio/dsp_lab.git", branch="master"}
raw-window-handle = "0.3"
tuix = {git = "https://github.com/geom3trik/tuix", branch = "experiment", features = ["baseview"], default-features = false}
femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master"}


[lib]
name = "VIBE_MACHINE"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "fat"